GUAAAAAAAAAH HMMMMG MAKE THE KICKS!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

--- a/MyGame/MyGame.csproj
+++ b/MyGame/MyGame.csproj
@@ -58,6 +58,9 @@
     <None Update="Resources\explosion09.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Resources\floor.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Resources\laser.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
